# PsyRag

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  deny.toml  docker-compose.yml
.github/workflows/: ci.yml  release.yml
deploy/: Caddyfile  nginx.conf
docs/: architecture.md  concepts.md  deployment.md  integrations.md  mcp.md  reference.md  runbook.md
examples/: config.json  inventory.json
gcp/: README.md
psyrag/: Cargo.toml
psyrag-core/: Cargo.toml
psyrag-core/src/: backend.rs  lib.rs
psyrag-core/tests/: backend_conformance.rs  golden.rs  properties.rs
psyrag-graph/: Cargo.toml  README.md
psyrag-graph/examples/: membench.rs
psyrag-graph/src/: entity.rs  gcp.rs  graph.rs  lib.rs  persist.rs  snapshot.rs
psyrag-graph/tests/: accounting.rs  fuzz_lite.rs  generic.rs  persistence.rs  scenario.rs
psyrag-graph/tests/fixtures/: future-version.wal  sidecar-future.json  sidecar-v1.json  sidecar-v2.json  v0-legacy.wal  v1-framed.wal
psyrag/src/: args.rs  client.rs  config.rs  engine.rs  export.rs  log.rs  main.rs  metrics.rs  monitor.rs  prom.rs  serve.rs  ui.html
psyrag/src/mcp/: events.rs  graph_ops.rs  jsonrpc.rs  maintenance.rs  mod.rs  paths.rs  protocol.rs  recall.rs
psyrag/tests/: format_fixtures.rs  mcp_jsonrpc.rs  mcp_learning.rs
python/: README.md  adapters.py  agent_example.py  psyrag_client.py  psyrag_memory.py
scripts/: crash.sh  install.sh  load.py  load.sh  smoke.sh  standby.sh
