[package]
name = "psyrag-graph"
version = "0.4.0"
edition = "2021"
description = "Embeddable temporal typed property graph for cloud inventory. Append-only, diffable, blast-radius aware."
license = "Apache-2.0"

[features]
default = ["gcp"]
gcp = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
